--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -1,5 +1,10 @@
 # you can read more about security in the related section of the documentation
 # http://symfony.com/doc/current/book/security.html
+
+jms_security_extra:
+    secure_all_services: false
+    expressions: true
+
 security:
     # http://symfony.com/doc/current/book/security.html#encoding-the-user-s-password
     encoders:
@@ -41,30 +46,6 @@ security:
             remember_me:
                 key:        %secret% # %secret% est un paramètre de parameters.yml
 
-
-        # the login page has to be accessible for everybody
-        # demo_login:
-        #     pattern:  ^/demo/secured/login$
-        #     security: false
-
-        # # secures part of the application
-        # demo_secured_area:
-        #     pattern:    ^/demo/secured/
-        #     # it's important to notice that in this case _demo_security_check and _demo_login
-        #     # are route names and that they are specified in the AcmeDemoBundle
-        #     form_login:
-        #         check_path: _demo_security_check
-        #         login_path: _demo_login
-        #     logout:
-        #         path:   _demo_logout
-        #         target: _demo
-            #anonymous: ~
-            #http_basic:
-            #    realm: "Secured Demo Area"
-
-    # with these settings you can restrict or allow access for different parts
-    # of your application based on roles, ip, host or methods
-    # http://symfony.com/doc/current/cookbook/security/access_control.html
     access_control:
         #- { path: ^/login, roles: IS_AUTHENTICATED_ANONYMOUSLY, requires_channel: https }
         - { path: ^/$, role: IS_AUTHENTICATED_ANONYMOUSLY }
