--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,7 @@
+lbf_admin:
+    resource: "@LBFAdminBundle/Resources/config/routing.yml"
+    prefix:   /
+
 lbf_main:
     resource: "@LBFMainBundle/Resources/config/routing.yml"
     prefix:   /{_locale}
