--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,7 +1,3 @@
-lbf_admin:
-    resource: "@LBFAdminBundle/Resources/config/routing.yml"
-    prefix:   /
-
 lbf_main:
     resource: "@LBFMainBundle/Resources/config/routing.yml"
     prefix:   /{_locale}
@@ -12,6 +8,12 @@ lbf_main:
 lbf_user:
     resource: "@LBFUserBundle/Resources/config/routing.yml"
     prefix:   /{_locale}/user
+    requirements:
+        _locale: es|en|fr
+
+lbf_admin:
+    resource: "@LBFAdminBundle/Resources/config/routing.yml"
+    prefix:   /{_locale}/admin
     requirements:
         _locale: es|en|fr
 
