--- a/composer.json
+++ b/composer.json
@@ -22,8 +22,7 @@
         "sensio/generator-bundle": "~2.3",
         "incenteev/composer-parameter-handler": "~2.0",
         "jms/security-extra-bundle": "1.5.*",
-        "friendsofsymfony/user-bundle": "1.3.*",
-        "winzou/console-bundle": "dev-master"
+        "friendsofsymfony/user-bundle": "1.3.*"
     },
     "require-dev": {
         "sensio/generator-bundle": "~2.3"
