--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -21,6 +21,9 @@ lbf_admin:
 
 fos_user_security:
     resource: "@FOSUserBundle/Resources/config/routing/security.xml"
+    prefix:     /{_locale}/
+    requirements:
+        _locale: es|en|fr
 
 fos_user_profile:
     resource: "@FOSUserBundle/Resources/config/routing/profile.xml"
