--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -4,6 +4,11 @@ parameters:
 #    parameter_name: value
 
 services:
+    lbf_user.registration.form.type:
+        class: 		LBF\UserBundle\Form\RegistrationFormType
+        arguments: 	[%fos_user.model.user.class%]
+        tags:
+            - { name: form.type, alias: lbf_user_registration }
 #    service_name:
 #        class: AppBundle\Directory\ClassName
 #        arguments: ["@another_service_name", "plain_value", "%parameter_name%"]
