--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -23,7 +23,7 @@ fos_user_security:
     resource: "@FOSUserBundle/Resources/config/routing/security.xml"
     prefix:     /{_locale}/
     requirements:
-        _locale: es|en|fr
+        _locale: es|en|fr|
 
 fos_user_profile:
     resource: "@FOSUserBundle/Resources/config/routing/profile.xml"
