--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -96,3 +96,16 @@ fos_user:
                 address:        noreply@lebuffetfrances.com
                 sender_name:    LBF Team
             template:           LBFUserBundle:Register:resetting.email.html.twig
+
+
+# Redactor bundle
+lbf_redactor:
+    admin_main:
+        settings:
+            lang:                   fr
+            minHeight:              200
+            plugins:                ['fullscreen']
+            tabindex : 0
+            buttons:                ['html', 'formatting', 'bold', 'italic', 'underline', 'deleted', 'link', 'alignment', 'unorderedlist', 'orderedlist', 'outdent', 'indent', 'table', 'horizontalrule']
+            formattingTags:         ['p', 'blockquote', 'pre']
+        role: [ROLE_ADMIN, IS_AUTHENTICATED_REMEMBERED]
