--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,19 +1,19 @@
 lbf_main:
     resource: "@LBFMainBundle/Resources/config/routing.yml"
-    prefix:   /{_locale}
+    prefix:   /{_locale}/
     requirements:
         _locale: es|en|fr|   # needs to be null in case no /language is provided
 
 
 lbf_user:
     resource: "@LBFUserBundle/Resources/config/routing.yml"
-    prefix:   /{_locale}/user
+    prefix:   /{_locale}/user/
     requirements:
         _locale: es|en|fr
 
 lbf_admin:
     resource: "@LBFAdminBundle/Resources/config/routing.yml"
-    prefix:   /{_locale}/admin
+    prefix:   /{_locale}/admin/
     requirements:
         _locale: es|en|fr
 
@@ -27,25 +27,25 @@ fos_user_security:
 
 fos_user_profile:
     resource: "@FOSUserBundle/Resources/config/routing/profile.xml"
-    prefix:     /{_locale}/profile
+    prefix:     /{_locale}/profile/
     requirements:
         _locale: es|en|fr
 
 fos_user_register:
     resource: "@FOSUserBundle/Resources/config/routing/registration.xml"
-    prefix:     /{_locale}/register
+    prefix:     /{_locale}/register/
     requirements:
         _locale: es|en|fr
 
 fos_user_resetting:
     resource: "@FOSUserBundle/Resources/config/routing/resetting.xml"
-    prefix:     /{_locale}/resetting
+    prefix:     /{_locale}/resetting/
     requirements:
         _locale: es|en|fr
 
 fos_user_change_password:
     resource: "@FOSUserBundle/Resources/config/routing/change_password.xml"
-    prefix:     /{_locale}/changePassword
+    prefix:     /{_locale}/changePassword/
     requirements:
         _locale: es|en|fr
 
